--- a/nify/template/index.html
+++ b/nify/template/index.html
@@ -15,7 +15,7 @@
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
                     <div class="hero-image">
-                        <img src="https://cdni.iconscout.com/illustration/premium/thumb/coding-workspace-5521917-4609936.png" alt="Hero Illustration" class="img-fluid floating">
+                        <img src="static/assets/img/nifffy.png" alt="Hero Illustration" class="img-fluid floating">
                     </div>
                 </div>
             </div>
