--- a/nify/template/base.html
+++ b/nify/template/base.html
@@ -113,14 +113,14 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-4">
-                    <h3>CodeShare Hub</h3>
+                    <h3>Nify</h3>
                     <p>Share your programming projects with the world.</p>
                 </div>
                 <div class="col-lg-4">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="#home">Home</a></li>
-                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="{{project_detail.url}}">Projects</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
