--- a/nify/template/panel.html
+++ b/nify/template/panel.html
@@ -27,7 +27,7 @@
                     <i class="fas fa-cloud-upload-alt"></i>
                     Upload Project
                 </a>
-                <a href="#" class="nav-item">
+                <a href="recent" class="nav-item">
                     <i class="fas fa-folder"></i>
                     My Projects
                 </a>
@@ -55,11 +55,12 @@
 
                     <div class="input-group-modern">
                         <label>Category:</label>
-                        <select name="categorie">
+                        <select name="categorie" class="selectpicker">
                             {% for category in categories %}
                                 <option value="{{ category.id }}">{{ category.name }}</option>
                             {% endfor %}
                         </select>
+                        
                     </div>
 
                     <div class="input-group-modern">
