--- a/nify/template/view_detail.html
+++ b/nify/template/view_detail.html
@@ -8,7 +8,7 @@
                 <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="https://picsum.photos/800/400?random=1" class="d-block w-100" alt="Project Image">
+                            <img src="{{project.feature_image.url}}" class="d-block w-100" alt="Project Image">
                         </div>
                         <div class="carousel-item">
                             <img src="https://picsum.photos/800/400?random=2" class="d-block w-100" alt="Project Image">
@@ -60,9 +60,12 @@
                             <p>{{project.description}}</p>
                             <h4>Key Features:</h4>
                             <ul>
-                                <li>Real-time image classification</li>
-                                <li>Support for multiple image formats</li>
-                                <li>Pre-trained models included</li>
+                                {% for i in requirements  %}
+                                
+                                
+                                <li>{{ i.points }}</li>
+                
+                                {% endfor %}
                             </ul>
                         </div>
                         <div class="tab-pane fade" id="requirements">
